--- a/src/hsl-slider/style.styl
+++ b/src/hsl-slider/style.styl
@@ -13,19 +13,25 @@ body
 .color-slider
   width 300px
   height 20px
-  // border 4px solid #111
-  // border-radius 4px
+  border 4px solid #111
+  border-radius 4px
   position relative
-  background linear-gradient(90deg, hsl(0, 100%, 50%), hsl(36, 100%, 50%), hsl(72, 100%, 50%), hsl(108, 100%, 50%), hsl(144, 100%, 50%), hsl(180, 100%, 50%), hsl(216, 100%, 50%), hsl(252, 100%, 50%), hsl(288, 100%, 50%), hsl(324, 100%, 50%), hsl(360, 100%, 50%))
+  background 'linear-gradient(90deg, hsl(0, 100%, %s), hsl(36, 100%, %s), hsl(72, 100%, %s), hsl(108, 100%, %s), hsl(144, 100%, %s), hsl(180, 100%, %s), hsl(216, 100%, %s), hsl(252, 100%, %s), hsl(288, 100%, %s), hsl(324, 100%, %s), hsl(360, 100%, %s))' % (calc(var(--lightness, 50) * 1%) calc(var(--lightness, 50) * 1%) calc(var(--lightness, 50) * 1%) calc(var(--lightness, 50) * 1%) calc(var(--lightness, 50) * 1%) calc(var(--lightness, 50) * 1%) calc(var(--lightness, 50) * 1%) calc(var(--lightness, 50) * 1%) calc(var(--lightness, 50) * 1%) calc(var(--lightness, 50) * 1%) calc(var(--lightness, 50) * 1%))
 
   &__handle
     height 50px
     width 50px
     border-radius 100%
-    background 'hsl(%s, 100%, 50%)' % var(--hue, 0)
+    background 'hsl(%s, 100%, %s)' % (var(--hue, 0) calc(var(--lightness, 50) * 1%))
     border 4px solid #111
     touch-action none
     position absolute
     top 50%
     left calc(var(--value, 0) * 1%)
     transform translate(-50%, -50%)
+
+    input
+      position absolute
+      top 0
+      left 50%
+      transform translate(-50%, -50px)
