feat: hsl slider

--- a/src/clip-path-buttons/dev.pug
+++ b/src/clip-path-buttons/dev.pug
@@ -1,13 +1,12 @@
 - const colors = ['#0088FF', '#FFAA00', '#FF7700', '#FF0033', '#9911AA', '#AADD22']
 .container
   - for (let b = 0; b < colors.length; b++)
-    button(role='button' tabindex='0' style=`--color: ${colors[b]}`) Click!
+    button(role='button' tabindex='0' style=`--buttonColor: ${colors[b]}`) Boo!
       span
       span
       span
       span
-      div(aria-hidden='true') Click!
-      div(aria-hidden='true') Click!
-      div(aria-hidden='true') Click!
-      div(aria-hidden='true') Click!
-      div(aria-hidden='true') Click!
+      b(aria-hidden='true') Boo!
+      b(aria-hidden='true') Boo!
+      b(aria-hidden='true') Boo!
+      b(aria-hidden='true') Boo!
