--- a/src/hsl-slider/index.pug
+++ b/src/hsl-slider/index.pug
@@ -10,4 +10,6 @@ html
       include dev.pug
     script(crossorigin, src="https://unpkg.com/react@16.8.0/umd/react.development.js")
     script(crossorigin, src="https://unpkg.com/react-dom@16.8.0/umd/react-dom.development.js")
+    script(src="https://cdnjs.cloudflare.com/ajax/libs/prop-types/15.6.1/prop-types.min.js")
+    script(src='https://www.w3schools.com/lib/w3color.js')
     script(src="script.js")
