--- a/src/hsl-slider/style.styl
+++ b/src/hsl-slider/style.styl
@@ -1,4 +1,5 @@
 *
+*:after
   box-sizing border-box
 
 
@@ -9,13 +10,16 @@ body
   justify-content center
   min-height 100vh
   flex-direction column
+  font-family -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+  cursor var(--cursor)
 
-.color-slider
-  width 300px
+.hsl-slider
+  width 280px
   height 20px
   border 4px solid #111
   border-radius 4px
   position relative
+  max-width 70vw
   background 'linear-gradient(90deg, hsl(0, %s, %s), hsl(36, %s, %s), hsl(72, %s, %s), hsl(108, %s, %s), hsl(144, %s, %s), hsl(180, %s, %s), hsl(216, %s, %s), hsl(252, %s, %s), hsl(288, %s, %s), hsl(324, %s, %s), hsl(360, %s, %s))' % (calc(var(--saturation, 100) * 1%) calc(var(--lightness, 50) * 1%) calc(var(--saturation, 100) * 1%) calc(var(--lightness, 50) * 1%) calc(var(--saturation, 100) * 1%) calc(var(--lightness, 50) * 1%) calc(var(--saturation, 100) * 1%) calc(var(--lightness, 50) * 1%) calc(var(--saturation, 100) * 1%) calc(var(--lightness, 50) * 1%) calc(var(--saturation, 100) * 1%) calc(var(--lightness, 50) * 1%) calc(var(--saturation, 100) * 1%) calc(var(--lightness, 50) * 1%) calc(var(--saturation, 100) * 1%) calc(var(--lightness, 50) * 1%) calc(var(--saturation, 100) * 1%) calc(var(--lightness, 50) * 1%) calc(var(--saturation, 100) * 1%) calc(var(--lightness, 50) * 1%) calc(var(--saturation, 100) * 1%) calc(var(--lightness, 50) * 1%))
 
   &__handle
@@ -29,19 +33,36 @@ body
     top 50%
     left calc(var(--value, 0) * 1%)
     transform translate(-50%, -50%)
+    cursor var(--cursor)
 
     &--lightness
-      background 'hsl(0, 0%, %s)' % (calc(var(--lightness, 50) * 1%))
-      left 50%
-      width 50%
-      height 50%
-      top 50%
-      transform translate(-50%, -50%) rotate(90deg) rotate(calc(var(--angle) * 1deg)) translate(0, 50px)
-
     &--saturation
-      background background 'linear-gradient(90deg, hsl(0, %s, 50%), hsl(36, %s, 50%), hsl(72, %s, 50%), hsl(108, %s, 50%), hsl(144, %s, 50%), hsl(180, %s, 50%), hsl(216, %s, 50%), hsl(252, %s, 50%), hsl(288, %s, 50%), hsl(324, %s, 50%), hsl(360, %s, 50%))' % (calc(var(--saturation, 50) * 1%) calc(var(--saturation, 50) * 1%) calc(var(--saturation, 50) * 1%) calc(var(--saturation, 50) * 1%) calc(var(--saturation, 50) * 1%) calc(var(--saturation, 50) * 1%) calc(var(--saturation, 50) * 1%) calc(var(--saturation, 50) * 1%) calc(var(--saturation, 50) * 1%) calc(var(--saturation, 50) * 1%) calc(var(--saturation, 50) * 1%))
       left 50%
-      top 50%
-      width 50%
-      height 50%
+      width 100%
+      height 100%
+      background transparent
+      border 0
       transform translate(-50%, -50%) rotate(90deg) rotate(calc(var(--angle) * 1deg)) translate(0, 50px)
+      &:after
+        content ''
+        position absolute
+        height 50%
+        width 50%
+        border 4px solid #111
+        border-radius 100%
+        top 50%
+        left 50%
+        transform translate(-50%, -50%)
+    &--lightness:after
+      background 'hsl(0, 0%, %s)' % (calc(var(--lightness, 50) * 1%))
+    &--saturation:after
+      background 'linear-gradient(90deg, hsl(0, %s, 50%), hsl(36, %s, 50%), hsl(72, %s, 50%), hsl(108, %s, 50%), hsl(144, %s, 50%), hsl(180, %s, 50%), hsl(216, %s, 50%), hsl(252, %s, 50%), hsl(288, %s, 50%), hsl(324, %s, 50%), hsl(360, %s, 50%))' % (calc(var(--saturation, 50) * 1%) calc(var(--saturation, 50) * 1%) calc(var(--saturation, 50) * 1%) calc(var(--saturation, 50) * 1%) calc(var(--saturation, 50) * 1%) calc(var(--saturation, 50) * 1%) calc(var(--saturation, 50) * 1%) calc(var(--saturation, 50) * 1%) calc(var(--saturation, 50) * 1%) calc(var(--saturation, 50) * 1%) calc(var(--saturation, 50) * 1%))
+
+.container
+  position relative
+
+.values
+  font-size .5rem
+  position absolute
+  color #ccc
+  top calc(100% + 100px)
