feat: fix blooming text for iOS

--- a/src/sunrise-text/dev.pug
+++ b/src/sunrise-text/dev.pug
@@ -1,4 +1,5 @@
-- const effects = ['North', 'North East', 'East', 'South East', 'South', 'South West', 'West', 'North West']
-each val in effects
-  .page
-    .text(data-word=val, data-scroll='out', data-splitting='', class=`text--${val.toLowerCase().replace(' ', '-')}`)= val
+- const directions = ['North', 'North East', 'East', 'South East', 'South', 'South West', 'West', 'North West']
+.container
+  each direction in directions
+    .page
+      .text(data-word=direction, data-scroll='out', data-splitting='', class=`text--${direction.toLowerCase().replace(' ', '-')}`)= direction
