feat: further work on cartoon sun

--- a/src/orange-and-blue-sun/dev.pug
+++ b/src/orange-and-blue-sun/dev.pug
@@ -8,7 +8,13 @@
   .sun__face
     .sun__eyes
       .sun__eye
+        .sun__eye-pupil
       .sun__eye
+        .sun__eye-pupil
+      .sun__shades
+        .sun__shades-lens
+        .sun__shades-lens
+        .sun__shades-arm
     .sun__mouth
       .sun__mouth-opening
       .sun__lip
